2007-08-04  Emmanuele Bassi  <ebassi@gnome.org>

	* screenshot-save.c: Make the temporary directory work on
	multi-user setups by using a unique name. (#427870)

2007-03-10  Emmanuele Bassi  <ebassi@gnome.org>

	* screenshot-dialog.c: Warn (in console) if g_filename_from_utf8()
	fails to convert the screenshot file name in case we are not in
	a utf8 locale, and fall back to the default screenshot file name,
	to avoid eating the user's folders. (#411050, thanks to
	Pascal Terjan for his detective work)

2007-03-04  Emmanuele Bassi  <ebassi@gnome.org>
	
	* gnome-screenshot.c: Add call to gettext() in order to
	translate the user visible name of the effect. (#413019,
	reported by Funda Wang, based on a patch by Gabor Kelemen).

2007-02-11  Emmanuele Bassi  <ebassi@gnome.org>

	* screenshot-shadow.c: Clean up some of the indentation;
	use BILINEAR instead of NEAREST as the interpolation
	algorithm, for better results.

2007-01-25  Emmanuele Bassi  <ebassi@gnome.org>

	* gnome-screenshot.c: Another set of HIG fixes for the
	interactive dialog: make the dialog not resizable; add more
	spacing; add/update the mnemonics. (#400203, Christian Persch)

2007-01-25  Emmanuele Bassi  <ebassi@gnome.org>

	* gnome-screenshot.c: Use an array of structures to hold the
	border effects informations (id, nick, label) and iterate on
	the array to fill up the model fed to the effects combo.

2007-01-25  Emmanuele Bassi  <ebassi@gnome.org>

	* gnome-screenshot.c: Unref the GnomeProgram instance if you
	cancel the screenshot in interactive mode; hide the dialog
	inside the response callback, while the main loop is still
	running, so that the screenshot functions can grab the desired
	window instead of the (non-existing) interactive dialog.

	* screenshot-save.[ch]:
	* screenshot-utils.[ch]: Add license and copyright notice on
	these files.

2007-01-24  Emmanuele Bassi  <ebassi@gnome.org>

	* gnome-screenshot.c: Do not leak GnomeProgram instance
	and don't free the GOptionContext we pass to